--- a/Project0/welcome.html
+++ b/Project0/welcome.html
@@ -19,7 +19,7 @@
         <img src="hi.gif" width="700px"height="700px" align = "left">
         <centre>
         <h1 style="text-align:justify;"><a href="aboutme.html"><button>About me</button></a></h1>
-        <a href ='file:///E:/MSIT_journey/MSIT_journey/Project0/feedback.html'><button>FeedBack </button></a>
+        <a href ="feedback.html"><button>FeedBack </button></a>
         </centre>   
     </body>
 </html>
